@@ -1,25 +1,58 @@
 package br.edu.ufu.comp.pos.db.imageretrieval;
 
+import java.io.File;
+import java.io.FileWriter;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+
+import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.IOUtils;
+
+import com.github.jknack.handlebars.Handlebars;
+import com.github.jknack.handlebars.Template;
 
 import br.edu.ufu.comp.pos.db.imageretrieval.clustering.birch.cftree.CFTree;
 import br.edu.ufu.comp.pos.db.imageretrieval.dataset.Dataset;
+import br.edu.ufu.comp.pos.db.imageretrieval.pojo.Image;
+import br.edu.ufu.comp.pos.db.imageretrieval.pojo.ImageHits;
+import br.edu.ufu.comp.pos.db.imageretrieval.pojo.QueryResult;
 
 public class Launcher {
-	// -Xmx4096m -XX:MaxPermSize=256m
+	// -Xmx4096m 
 	// -javaagent:/home/lucianos/birch-experiment/src/main/resources/SizeOf.jar
 	public static void main(String[] args) throws IOException {
 		Dataset dataset = new Dataset("/home/lucianos/birch-experiment/datasets/formated/oxford");
 
-		CFTree cfTree = new CFTree(10, 10, 50, true);
-		cfTree.setAutomaticRebuild(true);
-		cfTree.setMemoryLimit(1024l * 1024l * 2l);
+		CFTree tree = new CFTree(100, 0.01, 1, true);
+		tree.setAutomaticRebuild(true);
+		tree.setMemoryLimit(1024l * 1024l * 4l);
+		
+		dataset.scanSifts((sift) -> tree.insertEntry(sift));
+		
+		dataset.scan((img) -> tree.index(img));
+		
+		List<QueryResult> result = new ArrayList<QueryResult>();
+		
+		List<Image> allImages = dataset.list();
+//		Collections.shuffle(allImages);
+		for (Image queryImage : allImages) {
+			List<ImageHits> queryResult = tree.queryImage(queryImage);
+			result.add(new QueryResult(queryImage,queryResult));
+		}
 
-		dataset.scan((a) -> cfTree.insertEntry(a));
-
-		System.out.println(1);
-
-		// cfTree.insertEntry(x);
-	}
+		
+		Handlebars handlebars = new Handlebars();
+		String baseTemplate = IOUtils.toString(Launcher.class.getClassLoader().getResource("templates/results.html"));
+		Template template = handlebars.compileInline(baseTemplate);
+		
+		
+		File outFile = new File("/tmp/birch.html");
+		FileUtils.deleteQuietly(outFile);
+		FileWriter writer = new FileWriter(outFile);
+		writer.write(template.apply(result));
+		writer.close();
+		}
 
 }
